fixed navbar link text wrapping

--- a/CryptoSystem/CryptoSystem/static/styles/style.css
+++ b/CryptoSystem/CryptoSystem/static/styles/style.css
@@ -957,7 +957,7 @@ fieldset {
 .main-header .mainmenu-area .navbar-nav .nav-link {
 	color: #fff;
 	font-weight: 500;
-	padding: 10px 25px;
+	padding: 10px 20px;
 }
 
 .main-header .mainmenu-area .navbar {
